"Updated table with search results"

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -40,3 +40,12 @@
 .datatable-filter-demo .p-datatable.p-datatable-customers .p-dropdown-label:not(.p-placeholder) {
     text-transform: uppercase;
 }
+
+.p-toast {
+	width: 30rem !important;
+	opacity: 1 !important;
+}
+
+.toast-title {
+	margin: 8px 0px !important;
+}
