--- a/src/App.scss
+++ b/src/App.scss
@@ -44,3 +44,18 @@ body {
 .pi {
 	font-size: 1rem;
 }
+
+.custom-scrolltop {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 4px;
+    background-color: var(--primary-color) !important;
+}
+.custom-scrolltop:hover {
+    background-color: var(--primary-color) !important;
+}
+
+.custom-scrolltop .p-scrolltop-icon {
+    font-size: 1rem;
+    color: var(--primary-color-text);
+}
