--- a/src/App.scss
+++ b/src/App.scss
@@ -27,10 +27,14 @@ body {
 
 .hero-section {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
 	text-align: center;
+	form {
+		width: 50vw;
+	}
 }
 
 .hero-search {
@@ -38,7 +42,8 @@ body {
 }
 
 .container-padded {
-	padding: 0px 40px;
+	background-color: #f7f7f7;
+	padding: 0px 20px;
 }
 
 .pi {
@@ -58,4 +63,35 @@ body {
 .custom-scrolltop .p-scrolltop-icon {
     font-size: 1rem;
     color: var(--primary-color-text);
+}
+
+@media (max-width: 600px) {
+    .hero-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 95vw;
+        form {
+            width: 95vw;
+            .search-form {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                .p-inputtext {
+                    width: 100%;
+                    margin-bottom: 10px;
+                }
+                .p-button {
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    .container-padded {
+        padding: 0px 10px !important;
+    }
 }
