--- a/src/App.scss
+++ b/src/App.scss
@@ -80,6 +80,9 @@ body {
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                .p-inputwrapper {
+                    width: 100% !important;
+                }
                 .p-inputtext {
                     width: 100%;
                     margin-bottom: 10px;
@@ -94,4 +97,9 @@ body {
     .container-padded {
         padding: 0px 10px !important;
     }
+}
+
+.search-button {
+    display: flex;
+    justify-content: center;
 }
