--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 body {
 	margin: 0px !important;
+    overflow-x: hidden;
+    overflow-y: visible;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,19 +12,6 @@ body {
 .App {
 	padding-top: 95px;
 	text-align: center;
-}
-
-.App-link {
-	color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
 }
 
 .hero-section {
@@ -42,7 +31,7 @@ body {
 }
 
 .container-padded {
-	background-color: #f7f7f7;
+	background-color: #f6f6f6;
 	padding: 0px 20px;
 }
 
